Consolidate allocation and memleak profiling (#55)